# Agent9-HERMES

./: .dockerignore  .env.example  .env.production.template  .env.template  .gitignore  .pre-commit-config.yaml  .windsurfrules  AGENT_SPECIFICATIONS.md  Agent9_Architecture.pptx  CLAUDE.md  DEVELOPMENT_PLAN.md  Dockerfile  HERMES_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md  MVP_GUIDE.md  MVP_PRE_COPY_CHECKLIST.md  PHASE_10C_COMPLETION.md  PHASE_10C_PLAN.md  PHASE_10D_B_INTEGRATION_TESTING.md  PHASE_10D_PLAN.md  PHASE_10D_RESEARCH.md  README.md  TECHNICAL_DEBT.md  TRIAL_ACCOUNT_SETUP.md  VALIDATION_RESULTS.md  agent_config.yaml  clean_restart.ps1  commit_all_changes.ps1  commit_registry_changes.ps1  debug_customer_type.py  debug_principal_context_agent.py  debug_principal_context_agent_v2.py  decision_studio.py  final_fix_business_process_registry.py  fix_business_process_registry_keep_roles.py  fix_kpis_indentation.py  fix_tables_variable.py  fix_yaml_complete.py  fix_yaml_indentation.py  fixed_example.yaml  (+63 more)
.claude/: settings.json  settings.local.json
.github/: pull_request_template.md
.streamlit/: config.toml
_compare/: athena_a9_data_product_mcp_service.py
admin-ui/: package-lock.json  package.json  vite.config.ts
apps/: a9_athyna_llm_sql_tester.py
config/: connection_profiles.yaml
data/: agent9-hermes.duckdb
decision-studio-ui/: .env.development  .env.production  CLAUDE.md  DESIGN_SYSTEM.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vercel.json
docs/: CLAUDE.md  (+24 more)
(+791 files in other folders)
